ProyectoLenguaje/4 - IfsCiclos/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> START
Rule 1     START -> V PROC PROGRAM X PEND
Rule 2     X -> V P S
Rule 3     V -> DEF VARAUX X
Rule 4     VARAUX -> ID AS VARTYPE
Rule 5     V -> LET VARASSIGN X
Rule 6     VARASSIGN -> VARID EQUAL E
Rule 7     VARID -> ID
Rule 8     V -> EMPTY
Rule 9     P -> CALL SUBAUX X
Rule 10    SUBAUX -> ID
Rule 11    PROC -> PROCEDURE PROCAUX LCURL X RCURL PROCAUX2 PROC
Rule 12    PROC -> <empty>
Rule 13    PROCAUX -> ID
Rule 14    PROCAUX2 -> <empty>
Rule 15    P -> IN INPAUX X
Rule 16    INPAUX -> LPAREN VARID RPAREN
Rule 17    P -> PRINT PRINTAUX X
Rule 18    PRINTAUX -> LPAREN VAR RPAREN
Rule 19    PRINTAUX -> LPAREN APOS ID APOS RPAREN
Rule 20    P -> EMPTY
Rule 21    S -> IF IFAUX LCURL X RCURL IFAUX2 X
Rule 22    IFAUX -> LPAREN LOGE RPAREN
Rule 23    IFAUX2 -> IFELSE
Rule 24    IFAUX2 -> IFAUX3
Rule 25    IFAUX3 -> <empty>
Rule 26    IFELSE -> ELSEAUX LCURL X RCURL IFAUX3
Rule 27    ELSEAUX -> ELSE
Rule 28    S -> WHILE WHILEAUX LCURL X RCURL WHILEAUX2 X
Rule 29    WHILEAUX -> LPAREN LOGE RPAREN
Rule 30    WHILEAUX2 -> <empty>
Rule 31    S -> DO DOAUX LCURL X RCURL WHILE DOAUX2 X
Rule 32    DOAUX -> <empty>
Rule 33    DOAUX2 -> LPAREN LOGE RPAREN
Rule 34    S -> FOR FORAUX LCURL X RCURL FORAUX2 X
Rule 35    FORAUX -> LPAREN FORASSIGN COMMA LOGE RPAREN
Rule 36    FORAUX2 -> <empty>
Rule 37    FORASSIGN -> VARID EQUAL E
Rule 38    S -> E
Rule 39    S -> EMPTY
Rule 40    VARTYPE -> INT
Rule 41    VARTYPE -> FLOAT
Rule 42    VARTYPE -> VECDEF
Rule 43    VARTYPE -> MATDEF
Rule 44    VARTYPE -> CUBEDEF
Rule 45    NUMTYPE -> ID
Rule 46    NUMTYPE -> NINT
Rule 47    NUMTYPE -> NFLOAT
Rule 48    VAR -> NINT
Rule 49    VAR -> NFLOAT
Rule 50    VAR -> VECTOR
Rule 51    VAR -> MATRIX
Rule 52    VAR -> CUBEE
Rule 53    VAR -> ID
Rule 54    DIMTYPE -> INT
Rule 55    DIMTYPE -> FLOAT
Rule 56    VECDEF -> VEC LBRACK NINT RBRACK OF TYPE DIMTYPE
Rule 57    MATDEF -> MAT LBRACK NINT COMMA NINT RBRACK OF TYPE DIMTYPE
Rule 58    CUBEDEF -> CUBE LBRACK NINT COMMA NINT COMMA NINT RBRACK OF TYPE DIMTYPE
Rule 59    VECTOR -> ID LBRACK NUMTYPE RBRACK
Rule 60    MATRIX -> ID LBRACK NUMTYPE COMMA NUMTYPE RBRACK
Rule 61    CUBEE -> ID LBRACK NUMTYPE COMMA NUMTYPE COMMA NUMTYPE RBRACK
Rule 62    EMPTY -> <empty>
Rule 63    E -> E PLUS T
Rule 64    E -> E MINUS T
Rule 65    E -> T
Rule 66    T -> T MULT F
Rule 67    T -> T DIV F
Rule 68    T -> F
Rule 69    F -> LPAREN E RPAREN
Rule 70    F -> NINT
Rule 71    F -> VECTOR
Rule 72    F -> MATRIX
Rule 73    F -> CUBEE
Rule 74    F -> ID
Rule 75    F -> NFLOAT
Rule 76    LOGE -> LOGE OR LOGT
Rule 77    LOGE -> NOT LOGT
Rule 78    LOGE -> LOGT
Rule 79    LOGT -> LOGT AND LOGF
Rule 80    LOGT -> LOGF
Rule 81    LOGF -> VAR LT VAR
Rule 82    LOGF -> VAR LE VAR
Rule 83    LOGF -> VAR GT VAR
Rule 84    LOGF -> VAR GE VAR
Rule 85    LOGF -> VAR EQ VAR
Rule 86    LOGF -> VAR NE VAR
Rule 87    LOGF -> LPAREN LOGE RPAREN

Terminals, with rules where they appear

AND                  : 79
APOS                 : 19 19
AS                   : 4
CALL                 : 9
COMMA                : 35 57 58 58 60 61 61
CUBE                 : 58
DEF                  : 3
DIV                  : 67
DO                   : 31
ELSE                 : 27
EQ                   : 85
EQUAL                : 6 37
FLOAT                : 41 55
FOR                  : 34
GE                   : 84
GT                   : 83
ID                   : 4 7 10 13 19 45 53 59 60 61 74
IF                   : 21
IN                   : 15
INT                  : 40 54
LBRACK               : 56 57 58 59 60 61
LCURL                : 11 21 26 28 31 34
LE                   : 82
LET                  : 5
LPAREN               : 16 18 19 22 29 33 35 69 87
LT                   : 81
MAT                  : 57
MINUS                : 64
MULT                 : 66
NE                   : 86
NFLOAT               : 47 49 75
NINT                 : 46 48 56 57 57 58 58 58 70
NOT                  : 77
OF                   : 56 57 58
OR                   : 76
PEND                 : 1
PLUS                 : 63
PRINT                : 17
PROCEDURE            : 11
PROGRAM              : 1
RBRACK               : 56 57 58 59 60 61
RCURL                : 11 21 26 28 31 34
RPAREN               : 16 18 19 22 29 33 35 69 87
TYPE                 : 56 57 58
VEC                  : 56
WHILE                : 28 31
error                : 

Nonterminals, with rules where they appear

CUBEDEF              : 44
CUBEE                : 52 73
DIMTYPE              : 56 57 58
DOAUX                : 31
DOAUX2               : 31
E                    : 6 37 38 63 64 69
ELSEAUX              : 26
EMPTY                : 8 20 39
F                    : 66 67 68
FORASSIGN            : 35
FORAUX               : 34
FORAUX2              : 34
IFAUX                : 21
IFAUX2               : 21
IFAUX3               : 24 26
IFELSE               : 23
INPAUX               : 15
LOGE                 : 22 29 33 35 76 87
LOGF                 : 79 80
LOGT                 : 76 77 78 79
MATDEF               : 43
MATRIX               : 51 72
NUMTYPE              : 59 60 60 61 61 61
P                    : 2
PRINTAUX             : 17
PROC                 : 1 11
PROCAUX              : 11
PROCAUX2             : 11
S                    : 2
START                : 0
SUBAUX               : 9
T                    : 63 64 65 66 67
V                    : 1 2
VAR                  : 18 81 81 82 82 83 83 84 84 85 85 86 86
VARASSIGN            : 5
VARAUX               : 3
VARID                : 6 16 37
VARTYPE              : 4
VECDEF               : 42
VECTOR               : 50 71
WHILEAUX             : 28
WHILEAUX2            : 28
X                    : 1 3 5 9 11 15 17 21 21 26 28 28 31 31 34 34

Parsing method: LALR

state 0

    (0) S' -> . START
    (1) START -> . V PROC PROGRAM X PEND
    (3) V -> . DEF VARAUX X
    (5) V -> . LET VARASSIGN X
    (8) V -> . EMPTY
    (62) EMPTY -> .

    DEF             shift and go to state 3
    LET             shift and go to state 4
    PROCEDURE       reduce using rule 62 (EMPTY -> .)
    PROGRAM         reduce using rule 62 (EMPTY -> .)

    START                          shift and go to state 1
    V                              shift and go to state 2
    EMPTY                          shift and go to state 5

state 1

    (0) S' -> START .



state 2

    (1) START -> V . PROC PROGRAM X PEND
    (11) PROC -> . PROCEDURE PROCAUX LCURL X RCURL PROCAUX2 PROC
    (12) PROC -> .

    PROCEDURE       shift and go to state 7
    PROGRAM         reduce using rule 12 (PROC -> .)

    PROC                           shift and go to state 6

state 3

    (3) V -> DEF . VARAUX X
    (4) VARAUX -> . ID AS VARTYPE

    ID              shift and go to state 9

    VARAUX                         shift and go to state 8

state 4

    (5) V -> LET . VARASSIGN X
    (6) VARASSIGN -> . VARID EQUAL E
    (7) VARID -> . ID

    ID              shift and go to state 12

    VARASSIGN                      shift and go to state 10
    VARID                          shift and go to state 11

state 5

    (8) V -> EMPTY .

    PROCEDURE       reduce using rule 8 (V -> EMPTY .)
    PROGRAM         reduce using rule 8 (V -> EMPTY .)
    CALL            reduce using rule 8 (V -> EMPTY .)
    IN              reduce using rule 8 (V -> EMPTY .)
    PRINT           reduce using rule 8 (V -> EMPTY .)
    IF              reduce using rule 8 (V -> EMPTY .)
    WHILE           reduce using rule 8 (V -> EMPTY .)
    DO              reduce using rule 8 (V -> EMPTY .)
    FOR             reduce using rule 8 (V -> EMPTY .)
    LPAREN          reduce using rule 8 (V -> EMPTY .)
    NINT            reduce using rule 8 (V -> EMPTY .)
    ID              reduce using rule 8 (V -> EMPTY .)
    NFLOAT          reduce using rule 8 (V -> EMPTY .)
    PEND            reduce using rule 8 (V -> EMPTY .)
    RCURL           reduce using rule 8 (V -> EMPTY .)


state 6

    (1) START -> V PROC . PROGRAM X PEND

    PROGRAM         shift and go to state 13


state 7

    (11) PROC -> PROCEDURE . PROCAUX LCURL X RCURL PROCAUX2 PROC
    (13) PROCAUX -> . ID

    ID              shift and go to state 15

    PROCAUX                        shift and go to state 14

state 8

    (3) V -> DEF VARAUX . X
    (2) X -> . V P S
    (3) V -> . DEF VARAUX X
    (5) V -> . LET VARASSIGN X
    (8) V -> . EMPTY
    (62) EMPTY -> .

    DEF             shift and go to state 3
    LET             shift and go to state 4
    CALL            reduce using rule 62 (EMPTY -> .)
    IN              reduce using rule 62 (EMPTY -> .)
    PRINT           reduce using rule 62 (EMPTY -> .)
    IF              reduce using rule 62 (EMPTY -> .)
    WHILE           reduce using rule 62 (EMPTY -> .)
    DO              reduce using rule 62 (EMPTY -> .)
    FOR             reduce using rule 62 (EMPTY -> .)
    LPAREN          reduce using rule 62 (EMPTY -> .)
    NINT            reduce using rule 62 (EMPTY -> .)
    ID              reduce using rule 62 (EMPTY -> .)
    NFLOAT          reduce using rule 62 (EMPTY -> .)
    PROCEDURE       reduce using rule 62 (EMPTY -> .)
    PROGRAM         reduce using rule 62 (EMPTY -> .)
    PEND            reduce using rule 62 (EMPTY -> .)
    RCURL           reduce using rule 62 (EMPTY -> .)

    X                              shift and go to state 16
    V                              shift and go to state 17
    EMPTY                          shift and go to state 5

state 9

    (4) VARAUX -> ID . AS VARTYPE

    AS              shift and go to state 18


state 10

    (5) V -> LET VARASSIGN . X
    (2) X -> . V P S
    (3) V -> . DEF VARAUX X
    (5) V -> . LET VARASSIGN X
    (8) V -> . EMPTY
    (62) EMPTY -> .

    DEF             shift and go to state 3
    LET             shift and go to state 4
    CALL            reduce using rule 62 (EMPTY -> .)
    IN              reduce using rule 62 (EMPTY -> .)
    PRINT           reduce using rule 62 (EMPTY -> .)
    IF              reduce using rule 62 (EMPTY -> .)
    WHILE           reduce using rule 62 (EMPTY -> .)
    DO              reduce using rule 62 (EMPTY -> .)
    FOR             reduce using rule 62 (EMPTY -> .)
    LPAREN          reduce using rule 62 (EMPTY -> .)
    NINT            reduce using rule 62 (EMPTY -> .)
    ID              reduce using rule 62 (EMPTY -> .)
    NFLOAT          reduce using rule 62 (EMPTY -> .)
    PROCEDURE       reduce using rule 62 (EMPTY -> .)
    PROGRAM         reduce using rule 62 (EMPTY -> .)
    PEND            reduce using rule 62 (EMPTY -> .)
    RCURL           reduce using rule 62 (EMPTY -> .)

    X                              shift and go to state 19
    V                              shift and go to state 17
    EMPTY                          shift and go to state 5

state 11

    (6) VARASSIGN -> VARID . EQUAL E

    EQUAL           shift and go to state 20


state 12

    (7) VARID -> ID .

    EQUAL           reduce using rule 7 (VARID -> ID .)
    RPAREN          reduce using rule 7 (VARID -> ID .)


state 13

    (1) START -> V PROC PROGRAM . X PEND
    (2) X -> . V P S
    (3) V -> . DEF VARAUX X
    (5) V -> . LET VARASSIGN X
    (8) V -> . EMPTY
    (62) EMPTY -> .

    DEF             shift and go to state 3
    LET             shift and go to state 4
    CALL            reduce using rule 62 (EMPTY -> .)
    IN              reduce using rule 62 (EMPTY -> .)
    PRINT           reduce using rule 62 (EMPTY -> .)
    IF              reduce using rule 62 (EMPTY -> .)
    WHILE           reduce using rule 62 (EMPTY -> .)
    DO              reduce using rule 62 (EMPTY -> .)
    FOR             reduce using rule 62 (EMPTY -> .)
    LPAREN          reduce using rule 62 (EMPTY -> .)
    NINT            reduce using rule 62 (EMPTY -> .)
    ID              reduce using rule 62 (EMPTY -> .)
    NFLOAT          reduce using rule 62 (EMPTY -> .)
    PEND            reduce using rule 62 (EMPTY -> .)

    V                              shift and go to state 17
    X                              shift and go to state 21
    EMPTY                          shift and go to state 5

state 14

    (11) PROC -> PROCEDURE PROCAUX . LCURL X RCURL PROCAUX2 PROC

    LCURL           shift and go to state 22


state 15

    (13) PROCAUX -> ID .

    LCURL           reduce using rule 13 (PROCAUX -> ID .)


state 16

    (3) V -> DEF VARAUX X .

    PROCEDURE       reduce using rule 3 (V -> DEF VARAUX X .)
    PROGRAM         reduce using rule 3 (V -> DEF VARAUX X .)
    CALL            reduce using rule 3 (V -> DEF VARAUX X .)
    IN              reduce using rule 3 (V -> DEF VARAUX X .)
    PRINT           reduce using rule 3 (V -> DEF VARAUX X .)
    IF              reduce using rule 3 (V -> DEF VARAUX X .)
    WHILE           reduce using rule 3 (V -> DEF VARAUX X .)
    DO              reduce using rule 3 (V -> DEF VARAUX X .)
    FOR             reduce using rule 3 (V -> DEF VARAUX X .)
    LPAREN          reduce using rule 3 (V -> DEF VARAUX X .)
    NINT            reduce using rule 3 (V -> DEF VARAUX X .)
    ID              reduce using rule 3 (V -> DEF VARAUX X .)
    NFLOAT          reduce using rule 3 (V -> DEF VARAUX X .)
    PEND            reduce using rule 3 (V -> DEF VARAUX X .)
    RCURL           reduce using rule 3 (V -> DEF VARAUX X .)


state 17

    (2) X -> V . P S
    (9) P -> . CALL SUBAUX X
    (15) P -> . IN INPAUX X
    (17) P -> . PRINT PRINTAUX X
    (20) P -> . EMPTY
    (62) EMPTY -> .

  ! shift/reduce conflict for CALL resolved as shift
  ! shift/reduce conflict for IN resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
    CALL            shift and go to state 24
    IN              shift and go to state 25
    PRINT           shift and go to state 26
    IF              reduce using rule 62 (EMPTY -> .)
    WHILE           reduce using rule 62 (EMPTY -> .)
    DO              reduce using rule 62 (EMPTY -> .)
    FOR             reduce using rule 62 (EMPTY -> .)
    LPAREN          reduce using rule 62 (EMPTY -> .)
    NINT            reduce using rule 62 (EMPTY -> .)
    ID              reduce using rule 62 (EMPTY -> .)
    NFLOAT          reduce using rule 62 (EMPTY -> .)
    PROCEDURE       reduce using rule 62 (EMPTY -> .)
    PROGRAM         reduce using rule 62 (EMPTY -> .)
    PEND            reduce using rule 62 (EMPTY -> .)
    RCURL           reduce using rule 62 (EMPTY -> .)

  ! CALL            [ reduce using rule 62 (EMPTY -> .) ]
  ! IN              [ reduce using rule 62 (EMPTY -> .) ]
  ! PRINT           [ reduce using rule 62 (EMPTY -> .) ]

    P                              shift and go to state 23
    EMPTY                          shift and go to state 27

state 18

    (4) VARAUX -> ID AS . VARTYPE
    (40) VARTYPE -> . INT
    (41) VARTYPE -> . FLOAT
    (42) VARTYPE -> . VECDEF
    (43) VARTYPE -> . MATDEF
    (44) VARTYPE -> . CUBEDEF
    (56) VECDEF -> . VEC LBRACK NINT RBRACK OF TYPE DIMTYPE
    (57) MATDEF -> . MAT LBRACK NINT COMMA NINT RBRACK OF TYPE DIMTYPE
    (58) CUBEDEF -> . CUBE LBRACK NINT COMMA NINT COMMA NINT RBRACK OF TYPE DIMTYPE

    INT             shift and go to state 29
    FLOAT           shift and go to state 30
    VEC             shift and go to state 34
    MAT             shift and go to state 35
    CUBE            shift and go to state 36

    VARTYPE                        shift and go to state 28
    VECDEF                         shift and go to state 31
    MATDEF                         shift and go to state 32
    CUBEDEF                        shift and go to state 33

state 19

    (5) V -> LET VARASSIGN X .

    PROCEDURE       reduce using rule 5 (V -> LET VARASSIGN X .)
    PROGRAM         reduce using rule 5 (V -> LET VARASSIGN X .)
    CALL            reduce using rule 5 (V -> LET VARASSIGN X .)
    IN              reduce using rule 5 (V -> LET VARASSIGN X .)
    PRINT           reduce using rule 5 (V -> LET VARASSIGN X .)
    IF              reduce using rule 5 (V -> LET VARASSIGN X .)
    WHILE           reduce using rule 5 (V -> LET VARASSIGN X .)
    DO              reduce using rule 5 (V -> LET VARASSIGN X .)
    FOR             reduce using rule 5 (V -> LET VARASSIGN X .)
    LPAREN          reduce using rule 5 (V -> LET VARASSIGN X .)
    NINT            reduce using rule 5 (V -> LET VARASSIGN X .)
    ID              reduce using rule 5 (V -> LET VARASSIGN X .)
    NFLOAT          reduce using rule 5 (V -> LET VARASSIGN X .)
    PEND            reduce using rule 5 (V -> LET VARASSIGN X .)
    RCURL           reduce using rule 5 (V -> LET VARASSIGN X .)


state 20

    (6) VARASSIGN -> VARID EQUAL . E
    (63) E -> . E PLUS T
    (64) E -> . E MINUS T
    (65) E -> . T
    (66) T -> . T MULT F
    (67) T -> . T DIV F
    (68) T -> . F
    (69) F -> . LPAREN E RPAREN
    (70) F -> . NINT
    (71) F -> . VECTOR
    (72) F -> . MATRIX
    (73) F -> . CUBEE
    (74) F -> . ID
    (75) F -> . NFLOAT
    (59) VECTOR -> . ID LBRACK NUMTYPE RBRACK
    (60) MATRIX -> . ID LBRACK NUMTYPE COMMA NUMTYPE RBRACK
    (61) CUBEE -> . ID LBRACK NUMTYPE COMMA NUMTYPE COMMA NUMTYPE RBRACK

    LPAREN          shift and go to state 40
    NINT            shift and go to state 41
    ID              shift and go to state 45
    NFLOAT          shift and go to state 46

    E                              shift and go to state 37
    T                              shift and go to state 38
    F                              shift and go to state 39
    VECTOR                         shift and go to state 42
    MATRIX                         shift and go to state 43
    CUBEE                          shift and go to state 44

state 21

    (1) START -> V PROC PROGRAM X . PEND

    PEND            shift and go to state 47


state 22

    (11) PROC -> PROCEDURE PROCAUX LCURL . X RCURL PROCAUX2 PROC
    (2) X -> . V P S
    (3) V -> . DEF VARAUX X
    (5) V -> . LET VARASSIGN X
    (8) V -> . EMPTY
    (62) EMPTY -> .

    DEF             shift and go to state 3
    LET             shift and go to state 4
    CALL            reduce using rule 62 (EMPTY -> .)
    IN              reduce using rule 62 (EMPTY -> .)
    PRINT           reduce using rule 62 (EMPTY -> .)
    IF              reduce using rule 62 (EMPTY -> .)
    WHILE           reduce using rule 62 (EMPTY -> .)
    DO              reduce using rule 62 (EMPTY -> .)
    FOR             reduce using rule 62 (EMPTY -> .)
    LPAREN          reduce using rule 62 (EMPTY -> .)
    NINT            reduce using rule 62 (EMPTY -> .)
    ID              reduce using rule 62 (EMPTY -> .)
    NFLOAT          reduce using rule 62 (EMPTY -> .)
    RCURL           reduce using rule 62 (EMPTY -> .)

    X                              shift and go to state 48
    V                              shift and go to state 17
    EMPTY                          shift and go to state 5

state 23

    (2) X -> V P . S
    (21) S -> . IF IFAUX LCURL X RCURL IFAUX2 X
    (28) S -> . WHILE WHILEAUX LCURL X RCURL WHILEAUX2 X
    (31) S -> . DO DOAUX LCURL X RCURL WHILE DOAUX2 X
    (34) S -> . FOR FORAUX LCURL X RCURL FORAUX2 X
    (38) S -> . E
    (39) S -> . EMPTY
    (63) E -> . E PLUS T
    (64) E -> . E MINUS T
    (65) E -> . T
    (62) EMPTY -> .
    (66) T -> . T MULT F
    (67) T -> . T DIV F
    (68) T -> . F
    (69) F -> . LPAREN E RPAREN
    (70) F -> . NINT
    (71) F -> . VECTOR
    (72) F -> . MATRIX
    (73) F -> . CUBEE
    (74) F -> . ID
    (75) F -> . NFLOAT
    (59) VECTOR -> . ID LBRACK NUMTYPE RBRACK
    (60) MATRIX -> . ID LBRACK NUMTYPE COMMA NUMTYPE RBRACK
    (61) CUBEE -> . ID LBRACK NUMTYPE COMMA NUMTYPE COMMA NUMTYPE RBRACK

  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for NINT resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for NFLOAT resolved as shift
    IF              shift and go to state 50
    WHILE           shift and go to state 51
    DO              shift and go to state 52
    FOR             shift and go to state 53
    CALL            reduce using rule 62 (EMPTY -> .)
    IN              reduce using rule 62 (EMPTY -> .)
    PRINT           reduce using rule 62 (EMPTY -> .)
    PROCEDURE       reduce using rule 62 (EMPTY -> .)
    PROGRAM         reduce using rule 62 (EMPTY -> .)
    PEND            reduce using rule 62 (EMPTY -> .)
    RCURL           reduce using rule 62 (EMPTY -> .)
    LPAREN          shift and go to state 40
    NINT            shift and go to state 41
    ID              shift and go to state 45
    NFLOAT          shift and go to state 46

  ! IF              [ reduce using rule 62 (EMPTY -> .) ]
  ! WHILE           [ reduce using rule 62 (EMPTY -> .) ]
  ! DO              [ reduce using rule 62 (EMPTY -> .) ]
  ! FOR             [ reduce using rule 62 (EMPTY -> .) ]
  ! LPAREN          [ reduce using rule 62 (EMPTY -> .) ]
  ! NINT            [ reduce using rule 62 (EMPTY -> .) ]
  ! ID              [ reduce using rule 62 (EMPTY -> .) ]
  ! NFLOAT          [ reduce using rule 62 (EMPTY -> .) ]

    S                              shift and go to state 49
    E                              shift and go to state 54
    EMPTY                          shift and go to state 55
    T                              shift and go to state 38
    F                              shift and go to state 39
    VECTOR                         shift and go to state 42
    MATRIX                         shift and go to state 43
    CUBEE                          shift and go to state 44

state 24

    (9) P -> CALL . SUBAUX X
    (10) SUBAUX -> . ID

    ID              shift and go to state 57

    SUBAUX                         shift and go to state 56

state 25

    (15) P -> IN . INPAUX X
    (16) INPAUX -> . LPAREN VARID RPAREN

    LPAREN          shift and go to state 59

    INPAUX                         shift and go to state 58

state 26

    (17) P -> PRINT . PRINTAUX X
    (18) PRINTAUX -> . LPAREN VAR RPAREN
    (19) PRINTAUX -> . LPAREN APOS ID APOS RPAREN

